fix more overflow panels

--- a/openstack_dashboard/static/dashboard/scss/FIWARE-Accounts/pages/_organizations.scss
+++ b/openstack_dashboard/static/dashboard/scss/FIWARE-Accounts/pages/_organizations.scss
@@ -30,6 +30,17 @@
     }
   }
 }
+
+#myApplications,
+#organizations,
+#members{
+  .panel-body{
+    overflow-x: hidden;
+    max-height: 413px;
+  }
+}
+
+
 #detailApplication,
 #detailOrganization,
 #detailUser {
